 * Added field param to hide some fields from the Metafield::Fields list.
 * Made subobjects, fulltext and compound fields not show in that list.
 * Made that list order by name, alphabetically
 * Added an option to date fields to make them render a short version of
    the date.
 * Added the concept of "public privs" so that the search screen works ok.
 * Moved some of Items style into css.
 * Removed unused Search/User screen
 * Made Review and Items screens make the page 100% width
 * Renamed Save/Cancel buttons on user and savedsearch edit forms to be 
    clearer.
 * Fixed bug in EPrint Remove.
 * Screens can now add links to the <head> and request output other than
    XHTML.
 * Fixed bug in resetting search form.
 * Added property to fields to indicate if they are best ordered in reverse
    - dates and times have this set so most recent shows first.
 * Removed unsused staff/eprint_search
 * Cleaned up user search config.
 * Results citation now returns a <tr>

2006-11-10 cjg
 * Removed more unused stuff from Search 
 * Removed deprecated order methods 
 * Redesigned search input form
 * Search results no longer use a phrase.
 * Added User Search and History Search

2006-11-10 cjg
 * Added ordering for history search

2006-11-10 cjg
 * Changed screen layout.
 * Heading now centered
 * User toolbar now at top of screen above the h1.
 * Fixed some bugs introduced with earlier search changes.
 * Search forms now do submit when you hit return
 * Remved field_required_in_type
 * Fixed bug in error messages from user functions 
 * Fixed a bug in javascript toggle.

2006-11-10 cjg
 * Added new field to cachemap (userid)
 * Added new field to saved_search (name)
 * Disabled default and automatic calls for saved searches
 * Added some missing phrases.
 * Saved search name defaults to a description.
 * Saved search "public" defaults to false.
 * Added css to the saved search list
 * Cleaned up the search button in the template
 